# GaussianMixtureModel

./: CMakeLists.txt  README.md  package.xml
src/: gmm.cpp  publisher.cpp  subscriber.cpp
